// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField matches wrappersnapshot: wrapper mount 1`] = `
.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c2 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  clear: both;
  color: #d4351c;
}

.c6 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 4px solid #d4351c;
  margin-bottom: 0;
}

.c6:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c6[type="number"] {
  -moz-appearance: textfield;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c4:after {
  content: '';
  display: table;
  clear: both;
}

.c5 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.c7 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 4px solid #d4351c;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 20px;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c2 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c6 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c6 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c6 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<DateField
  defaultValues={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  errorText="example"
  inputNames={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  inputs={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
>
  <src__StyledContainer
    errorText="example"
  >
    <div
      className="c0"
    >
      <LabelText>
        <span
          className="c1"
        >
          example
        </span>
      </LabelText>
      <ErrorText>
        <span
          className="c2"
        >
          example
        </span>
      </ErrorText>
      <MultiInputInput
        defaultValues={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        error={true}
        inputs={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        names={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={Object {}}
      >
        <Input
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={true}
          inputs={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          labels={
            Object {
              "day": "Day",
              "month": "Month",
              "year": "Year",
            }
          }
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          refs={[Function]}
          value={Object {}}
        >
          <input__StyledList>
            <div
              className="c3"
            >
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c4 c5"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Day
                    </span>
                  </LabelText>
                  <Input
                    error={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c6"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c4 c5"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Month
                    </span>
                  </LabelText>
                  <Input
                    error={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c6"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={true}
              >
                <label
                  className="c4 c7"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Year
                    </span>
                  </LabelText>
                  <Input
                    error={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c6"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
            </div>
          </input__StyledList>
        </Input>
      </MultiInputInput>
    </div>
  </src__StyledContainer>
</DateField>
`;

exports[`DateField should support null value: null value 1`] = `
.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c5 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin-bottom: 0;
}

.c5:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c5[type="number"] {
  -moz-appearance: textfield;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c3:after {
  content: '';
  display: table;
  clear: both;
}

.c4 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.c6 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c5 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<DateField
  defaultValues={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  input={
    Object {
      "value": null,
    }
  }
  inputNames={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  inputs={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
>
  <src__StyledContainer>
    <div
      className="c0"
    >
      <LabelText>
        <span
          className="c1"
        >
          Date
        </span>
      </LabelText>
      <MultiInputInput
        defaultValues={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        error={false}
        inputs={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        names={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={null}
      >
        <Input
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={false}
          inputs={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          labels={
            Object {
              "day": "Day",
              "month": "Month",
              "year": "Year",
            }
          }
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          refs={[Function]}
          value={null}
        >
          <input__StyledList>
            <div
              className="c2"
            >
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c3 c4"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Day
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c3 c4"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Month
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={true}
              >
                <label
                  className="c3 c6"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Year
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
            </div>
          </input__StyledList>
        </Input>
      </MultiInputInput>
    </div>
  </src__StyledContainer>
</DateField>
`;

exports[`DateField should support setting value: value 1 2 3 1`] = `
.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c5 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin-bottom: 0;
}

.c5:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c5[type="number"] {
  -moz-appearance: textfield;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c3:after {
  content: '';
  display: table;
  clear: both;
}

.c4 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.c6 {
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c5 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<DateField
  defaultValues={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  input={
    Object {
      "value": Object {
        "day": "1",
        "month": "2",
        "year": "3",
      },
    }
  }
  inputNames={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
  inputs={
    Object {
      "day": undefined,
      "month": undefined,
      "year": undefined,
    }
  }
>
  <src__StyledContainer>
    <div
      className="c0"
    >
      <LabelText>
        <span
          className="c1"
        >
          Date
        </span>
      </LabelText>
      <MultiInputInput
        defaultValues={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        error={false}
        inputs={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        names={
          Object {
            "day": undefined,
            "month": undefined,
            "year": undefined,
          }
        }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={
          Object {
            "day": "1",
            "month": "2",
            "year": "3",
          }
        }
      >
        <Input
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={false}
          inputs={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          labels={
            Object {
              "day": "Day",
              "month": "Month",
              "year": "Year",
            }
          }
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          refs={[Function]}
          value={
            Object {
              "day": "1",
              "month": "2",
              "year": "3",
            }
          }
        >
          <input__StyledList>
            <div
              className="c2"
            >
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c3 c4"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Day
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                    value="1"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="1"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={false}
              >
                <label
                  className="c3 c4"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Month
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                    value="2"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="2"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
              <input__StyledLabel
                error={false}
                year={true}
              >
                <label
                  className="c3 c6"
                >
                  <LabelText>
                    <span
                      className="c1"
                    >
                      Year
                    </span>
                  </LabelText>
                  <Input
                    error={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="text"
                    value="3"
                  >
                    <input
                      className="c5"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="3"
                    />
                  </Input>
                </label>
              </input__StyledLabel>
            </div>
          </input__StyledList>
        </Input>
      </MultiInputInput>
    </div>
  </src__StyledContainer>
</DateField>
`;
